Archive/9e8efac91628d824959f2e3767837f68-871e158444abe16cc1c6c1112c59be39/output
main.cpp:11:14: error: namespace 'boost::property_tree' not allowed in using-declaration
 using boost::property_tree;
              ^
main.cpp:17:5: error: 'ptree' does not name a type
     ptree ptree_;
     ^
main.cpp:38:31: error: 'detail' was not declared in this scope
     typename boost::enable_if<detail::is_translator<Translator>, Type>::type
                               ^
main.cpp:38:31: note: suggested alternatives:
In file included from /usr/local/include/boost/throw_exception.hpp:44:0,
                 from /usr/local/include/boost/property_tree/ptree_fwd.hpp:16,
                 from /usr/local/include/boost/property_tree/ptree.hpp:15,
                 from main.cpp:1:
/usr/local/include/boost/current_function.hpp:26:1: note:   'boost::detail'
 {
 ^
In file included from /usr/local/include/boost/property_tree/ptree.hpp:15:0,
                 from main.cpp:1:
/usr/local/include/boost/property_tree/ptree_fwd.hpp:23:22: note:   'boost::property_tree::detail'
     namespace detail {
                      ^
In file included from /usr/local/include/boost/optional/optional.hpp:22:0,
                 from /usr/local/include/boost/optional.hpp:15,
                 from /usr/local/include/boost/property_tree/id_translator.hpp:16,
                 from /usr/local/include/boost/property_tree/string_path.hpp:15,
                 from /usr/local/include/boost/property_tree/ptree.hpp:16,
                 from main.cpp:1:
/usr/local/include/boost/assert.hpp:96:9: note:   'boost::assertion::detail'
         {
         ^
In file included from /usr/local/include/boost/multi_index_container_fwd.hpp:17:0,
                 from /usr/local/include/boost/multi_index_container.hpp:30,
                 from /usr/local/include/boost/property_tree/ptree.hpp:21,
                 from main.cpp:1:
/usr/local/include/boost/multi_index/identity.hpp:33:17: note:   'boost::multi_index::detail'
 namespace detail{
                 ^
In file included from /usr/local/include/boost/multi_index/detail/index_node_base.hpp:22:0,
                 from /usr/local/include/boost/multi_index/detail/node_type.hpp:23,
                 from /usr/local/include/boost/multi_index/detail/index_base.hpp:21,
                 from /usr/local/include/boost/multi_index/detail/base_type.hpp:21,
                 from /usr/local/include/boost/multi_index_container.hpp:33,
                 from /usr/local/include/boost/property_tree/ptree.hpp:21,
                 from main.cpp:1:
/usr/local/include/boost/serialization/access.hpp:26:18: note:   'boost::archive::detail'
 namespace detail {
                  ^
/usr/local/include/boost/serialization/access.hpp:39:18: note:   'boost::serialization::detail'
 namespace detail {
                  ^
In file included from /usr/local/include/boost/tuple/tuple.hpp:33:0,
                 from /usr/local/include/boost/multi_index/detail/index_base.hpp:23,
                 from /usr/local/include/boost/multi_index/detail/base_type.hpp:21,
                 from /usr/local/include/boost/multi_index_container.hpp:33,
                 from /usr/local/include/boost/property_tree/ptree.hpp:21,
                 from main.cpp:1:
/usr/local/include/boost/tuple/detail/tuple_basic.hpp:51:18: note:   'boost::tuples::detail'
 namespace detail {
                  ^
main.cpp:38:70: error: template argument 1 is invalid
     typename boost::enable_if<detail::is_translator<Translator>, Type>::type
                                                                      ^
main.cpp:38:71: error: expected identifier before '::' token
     typename boost::enable_if<detail::is_translator<Translator>, Type>::type
                                                                       ^
main.cpp:39:5: error: expected initializer before 'get'
     get(const std::string &argPath, const Type &argDefault, Translator tr) const {
     ^
main.cpp: In constructor 'XmlConfigurator::XmlConfigurator(const string&)':
main.cpp:25:39: error: 'ptree_' was not declared in this scope
         read_xml(configuration_file_, ptree_);
                                       ^
main.cpp:25:45: error: 'read_xml' was not declared in this scope
         read_xml(configuration_file_, ptree_);
                                             ^
main.cpp:25:45: note: suggested alternatives:
In file included from main.cpp:2:0:
/usr/local/include/boost/property_tree/xml_parser.hpp:46:10: note:   'boost::property_tree::xml_parser::read_xml'
     void read_xml(std::basic_istream<
          ^
/usr/local/include/boost/property_tree/xml_parser.hpp:73:10: note:   'boost::property_tree::xml_parser::read_xml'
     void read_xml(const std::string &filename,
          ^
main.cpp: In member function 'Type XmlConfigurator::get(const string&, Type) const':
main.cpp:32:22: error: 'ptree_' was not declared in this scope
         Type value = ptree_.get<Type>(argPath, argDefault);
                      ^
